# oxidizr

./: .env.example  .gitignore  Cargo.crates-io.toml  Cargo.toml  README.md  run_benchmark.sh
data/: README.md
data/nano-start/: README.md
docs/: README.md  cli.md  configuration.md  quickstart.md
docs/architecture/: mamba.md  mla.md  moe.md  overview.md
docs/data/: format.md  nano-start.md  tokenization.md
docs/guides/: output-modes.md  troubleshooting.md
docs/training/: checkpoints.md  cpu.md  gpu.md  multi-gpu.md
hf/: README.md
models/: README.md  nano-start.yaml  nano.yaml  nano_mamba2.yaml  nano_mamba3.yaml  nano_mamba3_hybrid.yaml  nano_mamba3_mimo.yaml
src/: config.rs  data.rs  main.rs  mamba.rs  mamba2.rs  mamba3.rs  model.rs  trainer.rs
src/commands/: mod.rs  pack.rs  push.rs  train.rs
src/distributed/: cpu_staging.rs  mod.rs  nccl.rs  optimizer.rs  sync.rs
